--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8">
-    <title>Example</title>
+    <title>Exercise 12.4</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="btn-box">
+          <button id="get-joke">Random joke</button>
+        </div>
+        <p id="joke"></p>
+    </div>
+
 <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
